Fixed a dumb bug i caused of being unable to scroll, and fixed something not being aligned

--- a/frontend_v2/src/app/globals.css
+++ b/frontend_v2/src/app/globals.css
@@ -121,8 +121,6 @@
     overscroll-behavior: none;
     height: 100%;
     width: 100%;
-    position: fixed;
-    overflow: hidden;
   }
 
   #root,
